--- a/Ders-1/index.html
+++ b/Ders-1/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css"><!-- with ctrl it opens automatically -->
+    <!-- https://....... ile de CSS dosyası çağırılabilir -->
 </head>
 <body>
-    <p>Mavi Arkaplan Web Sayfası İçin <a href="deneme.html">Tıklayınız</a></p>
+    <p>Mor Arkaplanlı Web Sayfası İçin <a href="deneme/deneme.html">Tıklayınız</a><br>
+    Mavi Arkaplanlı Web Sayfasına Dönmek İçin <a href="../Ders-2/index.html">Tıklayınız</a><br>
+    Ana Web Sayfasına Dönmek İçin <a href="../index.html">Tıklayınız</a>
+    </p>
 </body>
 </html>
