--- a/index.html
+++ b/index.html
@@ -10,10 +10,25 @@
 <body>
     <p>Kırmızı Arkaplanlı Web Sayfasına Dönmek İçin <a href="Ders-1/index.html">Tıklayınız</a><br>
     Mor Arkaplanlı Web Sayfasına Dönmek İçin <a href="Ders-1/deneme/deneme.html">Tıklayınız</a><br>
-    Mavi Arkaplanlı Web Sayfasına Dönmek İçin <a href="Ders-2/index.html">Tıklayınız</a>
+    Mavi Arkaplanlı Web Sayfasına Dönmek İçin <a href="Ders-2/index.html">Tıklayınız</a><br>
+    Ders-8 Sayfasına Dönmek İçin <a href="Ders-8/ders-8.html">Tıklayınız</a><br>
+    Ders-9 Sayfasına Dönmek İçin <a href="Ders-9/ders-9.html">Tıklayınız</a>
     </p><br><br><br>
 
     <h3>Test h3</h3>
-    <h3 style="color: red;">Test h3</h3>
+    <h3 style="color: red;">Test h3</h3><br><br><br>
+
+    <h4>Test id h4</h4>
+    <h4>Test id h4</h4>
+    <h4 id="enSon">Test id h4</h4><br><br><br>
+    <!-- Her ID tagı birbirinden farklı olmalıdır -->
+
+    <div style="background-color:white">
+        <h5 class="mavi-arkaplan text-big">Test class h5</h5>
+        <!-- Bir elementin birden fazla class'ı olabilir araya vosluk konularak devam edilir -->
+        <h5 class="mavi-arkaplan">Test class h5</h5>
+        <h6 class="mavi-arkaplan">Test class h6</h6>
+        <span class="mavi-arkaplan">Test class span</span>
+    </div>
 </body>
 </html> 
